<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">opensrp-immunization</string>
    <string name="action_settings">Settings</string>
    <string name="problem_applying_vaccine_constraints">Problem applying vaccine constraints.</string>
    <string name="immunizations">IMMUNIZATIONS</string>
    <string name="recurring">RECURRING SERVICES</string>
    <string name="done_today">Done Today</string>
    <string name="vaccine_done_today">Vaccine Done Today</string>
    <string name="vaccine_done_earlier">Vaccine Done Earlier</string>
    <string name="vaccines_done_today">Vaccines Done Today</string>
    <string name="vaccines_done_earlier">Vaccines Done Earlier</string>
    <string name="vaccine_name">Vaccine Name</string>
    <string name="vaccine_number">Vaccine Number</string>
    <string name="vaccine">Vaccine</string>
    <string name="set">Set</string>
    <string name="undo_record_vaccination">Undo Record Vaccination?</string>
    <string name="change_service_date">Change Service Date</string>
    <string name="birth">Birth</string>
    <string name="yes_undo_vaccination">Yes Undo Vaccination</string>
    <string name="no_go_back">No, Go Back</string>
    <string name="service">Service</string>
    <string name="units">Units</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>

    <string name="record_all">Record All</string>
    <string name="record_">Record %1$s</string>
    <string name="record_due_">Record %1$s - Due %2$s</string>
    <string name="mr_due_">%1$s - Due %2$s</string>
    <string name="due_">%1$s: Due %2$s</string>
    <string name="today">Today</string>
    <string name="vaccine_done_can_be_undone">%1$s - %2$s</string>
    <string name="vaccine_done_cannot_be_undone">%1$s - %2$s</string>

    <!-- Recurring Services -->
    <string name="recurring_services">Recurring Services</string>
    <string name="given_today">%1$s Given Today</string>
    <string name="given_earlier">%1$s Given Earlier</string>
    <string name="itn_given">Has the child been\ngiven an ITN?</string>
    <string name="itn_date">Date that the ITN\nwas provided:</string>
    <string name="itn_under_net">Is the child sleeping\nunder a net?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="record_itn">Record ITN Provided</string>
    <string name="go_back">Go Back</string>
    <string name="undo_service">Undo Service?</string>
    <string name="yes_undo_service">Yes, Undo Service</string>
    <string name="cannot_record_vaccine">Cannot Record %1$s</string>

    <string name="activate_child_status_dialog_title">This child\'s status is %1$s. Make %2$s active?</string>
    <string name="activate_child_status_dialog_message">Making the child active will resume the service schedules and lets you record services.</string>
    <string name="make_active">Make Active</string>

    <!-- Immunization Names-->
    <string name="bcg">BCG</string>
    <string name="hepb">HepB</string>
    <string name="opv_0">OPV 0</string>
    <string name="opv_1">OPV 1</string>
    <string name="pcv_1">PCV 1</string>
    <string name="penta_1">Penta 1</string>
    <string name="rota_1">Rota 1</string>
    <string name="opv_2">OPV 2</string>
    <string name="pcv_2">PCV 2</string>
    <string name="penta_2">Penta 2</string>
    <string name="rota_2">Rota 2</string>
    <string name="opv_3">OPV 3</string>
    <string name="ipv">IPV</string>
    <string name="pcv_3">PCV 3</string>
    <string name="penta_3">Penta 3</string>
    <string name="meningococcal">Meningococcal</string>
    <string name="yellow_fever">Yellow Fever</string>
    <string name="mr_1">MR 1</string>
    <string name="mr_2">MR 2</string>
    <string name="vit_a_1">Vit A 6 Months</string>
    <string name="vit_a_2">Vit A 12 Months</string>
    <string name="vha">VHA</string>

    <string name="at_birth">At Birth</string>
    <string name="_6_weeks">6 Weeks</string>
    <string name="_10_weeks">10 Weeks</string>
    <string name="_14_weeks">14 Weeks</string>
    <string name="_9_months">9 Months</string>
    <string name="_18_months">18 Months</string>

    <string name="expired">Expired</string>
    <string name="expired_colon">Expired: %1$s</string>
    <string name="out_of_catchment">Out of Catchment</string>

</resources>
