<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/child_profilepic"
                android:layout_width="@dimen/client_profile_pic_dialog_width"
                android:layout_height="@dimen/client_profile_pic_dialog_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/profile_pic_margin_top"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/child_boy_infant" />


            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/name"
                style="@style/CustomFontTextViewStyle.ClientList.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/name_margin_top"
                android:paddingStart="0dp"
                android:text="@string/vaccine_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/name_view_text_size" />


            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/number"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:text="@string/vaccine_number"
                android:textColor="@color/client_list_grey"
                android:textSize="@dimen/number_view_text_size" />

            <View
                android:id="@+id/break_point"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/break_point_margin_top"
                android:background="@color/client_list_header_dark_grey" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/vaccine"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vaccination_name_bottom_margin"
                android:layout_marginTop="@dimen/vaccination_name_top_margin"
                android:text="@string/vaccine"
                android:textColor="@color/text_black"
                android:textSize="@dimen/vaccine_text_size" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/undo_text"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/undo_text_view_margin_bottom"
                android:text="@string/undo_record_vaccination"
                android:textColor="@color/text_black"
                android:textSize="@dimen/undo_view_text_size" />

            <Button
                android:id="@+id/yes_undo"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_marginStart="@dimen/btn_margin_left"
                android:layout_marginEnd="@dimen/btn_margin_right"
                android:background="@drawable/vaccination_today_bg"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:paddingTop="@dimen/btn_padding_top"
                android:text="@string/yes_undo_vaccination"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/no_go_back"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_marginStart="@dimen/btn_margin_left"
                android:layout_marginEnd="@dimen/btn_margin_right"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:paddingTop="@dimen/btn_padding_top"
                android:text="@string/no_go_back"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/silver"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>