<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/vaccine_name"
                android:textColor="@color/text_black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_number"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/status"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/alert_urgent_red" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/vaccine"
                    style="@style/CustomFontTextViewStyle.ListView.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccine"
                    android:textColor="@color/text_black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/vaccinate_today"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/vaccination_today_bg"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/vaccine_done_today"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/vaccinate_earlier"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/vaccination_earlier_bg"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/vaccine_done_earlier"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="17sp" />


            <DatePicker
                android:id="@+id/earlier_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:visibility="gone" />

            <com.vijay.jsonwizard.customviews.NumericDatePicker
                android:id="@+id/earlier_date_picker_numeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/silver"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/set"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set"
                    android:textAllCaps="false"
                    android:textColor="@color/silver"
                    android:textSize="17sp"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>