<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itn_actions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/step_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itn_question_view_margin_top"
            android:layout_marginBottom="@dimen/itn_question_view_margin_bottom"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/itn_given"
            android:textColor="@color/text_black"
            android:textSize="@dimen/itn_question_view_text_size" />

        <Button
            android:id="@+id/yes_1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_left"
            android:layout_marginEnd="@dimen/btn_margin_right"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@drawable/vaccination_earlier_bg"
            android:paddingTop="@dimen/btn_padding_top"
            android:paddingBottom="@dimen/btn_padding_bottom"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/no_1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_left"
            android:layout_marginEnd="@dimen/btn_margin_right"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@drawable/vaccination_earlier_bg"
            android:paddingTop="@dimen/btn_padding_top"
            android:paddingBottom="@dimen/btn_padding_bottom"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/btn_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/cancel_linear_layout_margin_bottom"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/btn_padding_top"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/client_list_grey"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itn_question_view_margin_top"
            android:layout_marginBottom="@dimen/itn_question_view_margin_bottom"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/itn_date"
            android:textColor="@color/text_black"
            android:textSize="@dimen/itn_question_view_text_size" />

        <DatePicker
            android:id="@+id/itn_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/date_picker_margin_top"
            android:layout_marginBottom="@dimen/date_picker_margin_bottom"
            android:calendarViewShown="false"
            android:descendantFocusability="blocksDescendants"
            android:visibility="gone" />

        <com.vijay.jsonwizard.customviews.NumericDatePicker
            android:id="@+id/itn_date_picker_numeric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/date_picker_margin_top"
            android:layout_marginBottom="@dimen/date_picker_margin_bottom"
            android:calendarViewShown="false"
            android:descendantFocusability="blocksDescendants"
            android:visibility="gone" />

        <Button
            android:id="@+id/record_itn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_left"
            android:layout_marginEnd="@dimen/btn_margin_right"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@drawable/vaccination_today_bg"
            android:paddingTop="@dimen/btn_padding_top"
            android:paddingBottom="@dimen/btn_padding_bottom"
            android:text="@string/record_itn"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/go_back_2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/btn_padding_top"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:text="@string/go_back"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/client_list_grey"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.smartregister.view.customcontrols.CustomFontTextView
            style="@style/CustomFontTextViewStyle.ClientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itn_question_view_margin_top"
            android:layout_marginBottom="@dimen/itn_question_view_margin_bottom"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/itn_under_net"
            android:textColor="@color/text_black"
            android:textSize="@dimen/itn_question_view_text_size" />

        <Button
            android:id="@+id/yes_3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_left"
            android:layout_marginEnd="@dimen/btn_margin_right"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@drawable/vaccination_earlier_bg"
            android:paddingTop="@dimen/btn_padding_top"
            android:paddingBottom="@dimen/btn_padding_bottom"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/no_3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_left"
            android:layout_marginEnd="@dimen/btn_margin_right"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@drawable/vaccination_earlier_bg"
            android:paddingTop="@dimen/btn_padding_top"
            android:paddingBottom="@dimen/btn_margin_bottom"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/btn_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/go_back_linear_layout_margin_bottom"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/go_back_3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/btn_padding_top"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:text="@string/go_back"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/client_list_grey"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

