<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/child_profilepic"
                android:layout_width="@dimen/client_profile_pic_dialog_width"
                android:layout_height="@dimen/client_profile_pic_dialog_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/profile_pic_margin_top"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/child_boy_infant" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/name"
                    style="@style/CustomFontTextViewStyle.ClientList.Medium"
                    android:layout_marginTop="@dimen/name_margin_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:text="@string/vaccine_name"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/name_view_text_size" />
            </LinearLayout>


            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/number"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:text="@string/vaccine_number"
                android:textColor="@color/client_list_grey"
                android:textSize="@dimen/number_view_text_size" />

            <View
                android:id="@+id/break_point"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/break_point_margin_top"
                android:background="@color/client_list_header_dark_grey" />

            <LinearLayout
                android:id="@+id/vaccination_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vaccination_name_layout_bottom_margin"
                android:orientation="vertical" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/service_date"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:text="@string/vaccine_number"
                android:textColor="@color/client_list_grey"
                android:textSize="@dimen/date_view_text_size"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/vaccinate_today"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_marginStart="@dimen/btn_margin_left"
                android:layout_marginEnd="@dimen/btn_margin_right"
                android:background="@drawable/vaccination_earlier_bg"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:paddingTop="@dimen/btn_padding_top"
                android:text="@string/change_service_date"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/silver"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/vaccinate_earlier"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_marginStart="@dimen/btn_margin_left"
                android:layout_marginEnd="@dimen/btn_margin_right"
                android:background="@drawable/vaccination_earlier_bg"
                android:paddingBottom="@dimen/btn_padding_bottom"
                android:paddingTop="@dimen/btn_padding_top"
                android:text="@string/undo_record_vaccination"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/silver"
                android:textSize="@dimen/btn_text_size"
                android:gravity="center"/>

            <DatePicker
                android:id="@+id/earlier_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/date_picker_height"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:visibility="gone" />

            <com.vijay.jsonwizard.customviews.NumericDatePicker
                android:id="@+id/earlier_date_picker_numeric"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/date_picker_height"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vaccination_action_linear_layout_bottom_margin"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/btn_padding_bottom"
                    android:paddingTop="@dimen/btn_padding_top"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/silver"
                    android:textSize="@dimen/btn_text_size" />

                <Button
                    android:id="@+id/set"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/btn_padding_bottom"
                    android:paddingTop="@dimen/btn_padding_top"
                    android:text="@string/set"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/silver"
                    android:textSize="@dimen/btn_text_size"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>